--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
     <h2>Sign up</h2>
     <label for="emailSignup">Email:</label>
     <input type="text" id="emailSignup" #emailSignup>
+    <div class="error-message" *ngIf="emailErrorMessage">{{ emailErrorMessage }}</div>
     <label for="passwordSignup">Password:</label>
-    <input type="text" id="passwordSignup" #passwordSignup>
+    <input type="password" id="passwordSignup" #passwordSignup>
+    <div class="error-message" *ngIf="passwordErrorMessage">{{ passwordErrorMessage }}</div>
     <button (click)="onSignup(emailSignup.value, passwordSignup.value)">Sign up</button>
 </div>
 <hr>
@@ -12,7 +14,7 @@
     <label for="email">Email:</label>
     <input type="text" id="email" #email>
     <label for="password">Password:</label>
-    <input type="text" id="password" #password>
+    <input type="password" id="password" #password>
     <button (click)="onSignin(email.value, password.value)">Sign in</button>
 </div>
 <app-home *ngIf="isSignedIn" (isLogout)="handleLogout()"></app-home>
