Proper authentication implementation and rerouting setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,1 @@
-<div *ngIf="!isSignedIn">
-    <h2>Sign up</h2>
-    <label for="emailSignup">Email:</label>
-    <input type="text" id="emailSignup" #emailSignup>
-    <div class="error-message" *ngIf="emailErrorMessage">{{ emailErrorMessage }}</div>
-    <label for="passwordSignup">Password:</label>
-    <input type="password" id="passwordSignup" #passwordSignup>
-    <div class="error-message" *ngIf="passwordErrorMessage">{{ passwordErrorMessage }}</div>
-    <button (click)="onSignup(emailSignup.value, passwordSignup.value)">Sign up</button>
-</div>
-<hr>
-<div *ngIf="!isSignedIn">
-    <h2>Sign in</h2>
-    <label for="email">Email:</label>
-    <input type="text" id="email" #email>
-    <label for="password">Password:</label>
-    <input type="password" id="password" #password>
-    <button (click)="onSignin(email.value, password.value)">Sign in</button>
-</div>
-<app-home *ngIf="isSignedIn" (isLogout)="handleLogout()"></app-home>
-<img src="assets/images/blindfold-512.png" alt="blindfold" class="logo">
+<router-outlet></router-outlet>
