--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <p>You are logged in</p>
 <button (click)="logout()">Logout</button>
+<img src = "assets/images/blindfold-512.png" alt="Blindfold-Logo" style="width:25%">
