--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,29 @@
-<p>You are logged in</p>
+<!-- <p>You are logged in</p>
 <button (click)="logout()">Logout</button>
-<img src = "assets/images/blindfold-512.png" alt="Blindfold-Logo" style="width:25%">
+<img src = "assets/images/blindfold-512.png" alt="Blindfold-Logo" style="width:25%"> -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href='https://fonts.googleapis.com/css?family=Irish Grover' rel='stylesheet'>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+    <body style="background-color: black;">
+        <div class="sidenav">
+            <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
+            <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
+            <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
+            <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
+        </div>
+        <div >
+            <div class="centre">
+                <img src="assets/images/rabbit.jpg" class="img-fluid">
+            </div>
+            <div class="container">
+                <form action="search.php" method="GET">
+                    <input type="text" name="query" placeholder="Enter search here">
+                    <button type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+    </body>
+</html>
