--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -27,22 +27,25 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 10%;
     height: 70%;
     position: relative;
-    z-index: 1;
+    margin-left: 10%;
 }
 
 .container {
     margin: 0 auto;
     text-align: center;
+    height: 70%;
+    position: relative;
+    margin-left: 12%;
 }
 
 input[type="text"] {
     padding: 10px;
     width: 90%;
     margin-bottom: 10px;
-    margin-left: 10%;
+    height: 70%;
+    position: relative;
 }
 
 button {
@@ -57,15 +60,23 @@ button:hover {
     background-color: #eb1919;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: #000;
+}
+
 body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    background-color: #000;
 }
 
-/* Move this outside the media query */
 #userGreeting {
     color: white;
+    
 }
 
 @media (max-width:60em) {
@@ -75,14 +86,14 @@ body {
 
 
     .centre {
-        margin-left: 0;
+        margin-left: 0%;
     }
 
     .container {
-        margin-left: 0;
+    margin-left: 5%;
     }
 
     input[type="text"] {
-        margin-left: 0;
+        margin-left: 5%;
     }
 }
