--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -28,17 +28,25 @@
     height: 100%;
 }
 
-.chat{
-    height: 100%;
-    width: 150%;
-    background-color: #f5f1f1;
-    display: flex;
+
+
+.chat {
+    position: absolute;
+    width: 28%;
+    height: 45px;
+    background: #cac8c8;
     flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 15px;
+    min-height: 40px;
 }
 
 .chat input[type="text"] {
   border-radius: 10px; 
-  width: 70%;
+  width: 100%;
+  height: 60%;
 }
 
 
@@ -75,20 +83,24 @@ body {
     box-shadow: 2px 2px 20px rgba(0,0,0,0.4);
 }
 
-.chatlist{
-    width: 60%;
+.chatlist {
+    width: 27%;
+    position: absolute;
+    top: 45px;
+    overflow-y: auto;
+    height: 97%;
 }
 
 .header h1 {
     color: white;
-    padding: 15px;
+    
     margin-left: 40%;
 }
 
 .body {
     flex: 1;
     color: white;
-    background-color: rgba(169, 162, 162, 0.7);
+    background-color: rgb(142 159 189);
     padding: 20px 30px;
     margin: 0;
 }
@@ -117,16 +129,6 @@ body {
     color: black;
 }
 
-.chat {
-    position: relative;
-    width: 150%;
-    height: 50px;
-    background: #cac8c8;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 15px;
-}
 
 .chat div {
     width: 100%;
@@ -134,7 +136,6 @@ body {
 
 .chatlist .block {
     position: relative;
-    width: 220%;
     display: flex;
     align-items: center;
     padding: 10px;
@@ -143,7 +144,7 @@ body {
 }
 
 .chatlist .block:hover {
-    background-color: lightgrey;
+    background-color: rgb(221, 227, 236);
 }
 
 .chatlist .block img {
@@ -225,6 +226,12 @@ form button:hover {
     
 }
 
+@media (max-height: calc(100vh - 300px)) {
+    .chatlist {
+        top: 40px; /* Set top position to 40px when nearing the top */
+    }
+}
+
 @media (max-width: 60em) {
     .sidenav {
         display: none;
@@ -232,7 +239,15 @@ form button:hover {
 
     .container {
         padding-left: 0; 
-        padding-right: 0;
+        padding-right: 0; /
+    }
+
+    .chatlist{
+        width: 39%;
+    }
+
+    .chat{
+        width: 40%;
     }
 }
 
@@ -255,6 +270,4 @@ form button:hover {
     .body{
         background-color:rgb(142 159 189);
     }
-
-    
 }
