small login change

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,15 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link href='https://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet'>
-    <style>
-        .login-container {
-            font-family: 'Irish Grover', cursive;
-        }
-    </style>
 </head>
 <body>
-    <div class="login-container" *ngIf="!isSignedIn">
-        <h2>Blindfold</h2>
+    <div class=".container" *ngIf="!isSignedIn">
+        <h2 class="h2">Blindfold</h2>
         <div>
             <label for="email">Email:</label>
             <br>
@@ -24,8 +19,8 @@
             <br>
             <input type="password" id="password" #password>
         </div>
-        <button (click)="onSignin(email.value, password.value)">Login</button>
-        <button routerLink="/signup">Sign Up</button>
+        <button class="buttom" (click)="onSignin(email.value, password.value)">Login</button>
+        <button class="button" routerLink="/signup">Sign Up</button>
     </div>
     <!-- <app-home *ngIf="isSignedIn" (isLogout)="handleLogout()"></app-home> -->
 </body>
