--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -239,7 +239,7 @@ form button:hover {
 
     .container {
         padding-left: 0; 
-        padding-right: 0; /
+        padding-right: 0;
     }
 
     .chatlist{
