fix logout and add user to firebase on signup

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -39,7 +39,9 @@
         </div>
         <div class="right">
             <div class="black-section">
-                <div class="Profile_button"> <button>Sign Out</button></div>
+                <div class="Profile_button">
+                    <button (click)="logout()">Sign Out</button>
+                </div>
                 <div class="Profile_title"> Dating in Disguise </div>
                 <div class="Profile_background">Choose a background cover </div>
             </div>
