--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,8 +1,28 @@
-<h2>Sign up</h2>
+<!-- <h2>Sign up</h2>
     <label for="emailSignup">Email:</label>
     <input type="text" id="emailSignup" #emailSignup>
     <div class="error-message" *ngIf="emailErrorMessage">{{ emailErrorMessage }}</div>
     <label for="passwordSignup">Password:</label>
     <input type="password" id="passwordSignup" #passwordSignup>
     <div class="error-message" *ngIf="passwordErrorMessage">{{ passwordErrorMessage }}</div>
-    <button (click)="onSignup(emailSignup.value, passwordSignup.value)">Sign up</button>
+    <button (click)="onSignup(emailSignup.value, passwordSignup.value)">Sign up</button> -->
+    <form (ngSubmit)="onSubmit()">
+        <label for="userID">User ID:</label>
+        <input type="text" id="userID" name="userID" [(ngModel)]="userID">
+        
+        <label for="userName">User Name:</label>
+        <input type="text" id="userName" name="userName" [(ngModel)]="userName">
+        
+        <label for="userEmail">User Email:</label>
+        <input type="email" id="userEmail" name="userEmail" [(ngModel)]="userEmail">
+        <div *ngIf="emailErrorMessage" class="error-message">{{ emailErrorMessage }}</div>
+      
+        <label for="userPassword">User Password:</label>
+        <input type="password" id="userPassword" name="userPassword" [(ngModel)]="userPassword">
+        <div *ngIf="passwordErrorMessage" class="error-message">{{ passwordErrorMessage }}</div>
+      
+        <label for="userType">User Type:</label>
+        <input type="text" id="userType" name="userType" [(ngModel)]="userType">
+      
+        <button type="submit">Sign Up</button>
+      </form>
