--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Signup Page</title>
     <link href='https://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet'>
 </head>
 <body>
-<h2 class = "h2">Blindfold Sign Up</h2>
+<h2 class = "h2">Sign Up</h2>
 <form (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="userName">User Name:</label>
