--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -39,13 +39,12 @@ body{
 }
 
 .container {
-    width: 80%; /* Set the width of the container */
-    max-width: 78%; /* Set the maximum width of the container */
-    margin: 20px auto; /* Center the container horizontally with a margin */
-    padding: 0px; /* Add some padding inside the container */
-    background-color: #fff; /* Set the background color to white */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a shadow for visual effect */
-    height: 95vh;
+    width: 80%; 
+    max-width: 78%; 
+    margin: 20px auto; 
+    padding: 0px; 
+    background-color: #fff; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
     display: flex;
     margin-left: 17%;
 }
@@ -72,11 +71,12 @@ body{
 }
 
 .container .left .profile_info .profile-image img{
-    width: 100%;
-    height: auto; /* Maintain aspect ratio */
-    border-radius: 50%;
+    width: 65%;
+    height: auto; 
     overflow: hidden;
     cursor: pointer;
+    margin-top: 10%;
+
 }
 
 .user-details {
@@ -85,6 +85,7 @@ body{
 
 .form-group {
     margin-bottom: 5px;
+    
     
 }
 
@@ -95,46 +96,62 @@ body{
 
 }
 
+.label2{
+
+    margin-right: 20px;
+}
+
+input[type="text"],
+input[type="number"],
+select {
+    text-decoration: underline;
+    border-bottom: 1px solid black;
+    outline: none;
+
+}
+
+
+
 
 
 #name {
-    /* Add your desired background color */
-    background-color: #f0f0f0; /* Example color */
     
-    /* Add any other styling you want */
-    border: 1px solid #ccc; /* Example border */
-    padding: 8px; /* Example padding */
-    font-size: 16px; /* Example font size */
-    border-radius: 4px; /* Example border radius */
+    background-color: #f0f0f0; 
+    
+   
+    border: 1px solid #ccc; 
+    padding: 8px; 
+    font-size: 16px; 
+    border-bottom: 1.5px solid #F7270B;    
 }
 
 #age {
-    /* Add your desired background color */
-    background-color: #f0f0f0; /* Example color */
     
-    /* Add any other styling you want */
-    border: 1px solid #ccc; /* Example border */
-    padding: 8px; /* Example padding */
-    font-size: 16px; /* Example font size */
-    border-radius: 4px; /* Example border radius */
+    background-color: #f0f0f0; 
+    border: 1px solid #ccc; 
+    padding: 8px; 
+    font-size: 16px; 
+    border-bottom: 1.5px solid #F7270B;   
+    width: 64%; 
+
 }
 
 select {
-    /* Add your desired background color */
-    background-color: #f0f0f0; /* Example color */
+    background-color: #f0f0f0; 
     
-    /* Add any other styling you want */
-    border: 1px solid #ccc; /* Example border */
-    padding: 8px; /* Example padding */
-    font-size: 16px; /* Example font size */
-    border-radius: 4px; /* Example border radius */
+    border: 1px solid #ccc; 
+    padding: 8px; 
+    font-size: 16px; 
     cursor: pointer;
+    width: 64%;
+    border-bottom: 1.5px solid #F7270B;    
+
 }
 
 .container .right{
     position: relative;
     flex: 70%;
-    margin: 0; /* Remove margin */
+    margin: 0; 
     padding: 0;
     
 }
@@ -153,8 +170,8 @@ select {
     width: 100%;
     height: 50%;
     background: linear-gradient(#070707 0%, #040404 130px, #ada9af 130px, #ada9af 20%);
-    margin: 0; /* Remove margin */
-    padding: 0; /* Remove padding */
+    margin: 0; 
+    padding: 0; 
     
 }
 
@@ -188,12 +205,13 @@ select {
 
 }
 
-.Profile_background{
+.Profile_background img{
     text-align: center;
-    margin-top: 11%;
-    opacity: 0.4;
+    margin-top: 3%;
     font-size: 130%;
     cursor: pointer;
+    height: auto;
+    width: 100%;
 }
 
 
@@ -204,5 +222,74 @@ select {
     width: 100%;
     height: 50%;
     background-color: rgb(214, 210, 210);
-    margin: 0; /* Remove margin */
+    margin: 0; 
 }
+
+.interests{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: larger;
+    margin-left: 10%;
+    float: left;
+    padding-top: 5%;
+
+}
+
+.interests2 {
+    float: right;
+}
+
+#reading{
+margin-bottom: 15%;
+}
+
+#cooking{
+    margin-bottom: 15%;
+}
+
+#sports{
+    margin-bottom: 15%;
+ }
+
+ #traveling{
+    margin-bottom: 15%;
+}
+
+#smoker{
+    margin-bottom: 15%;
+}
+
+.profile_description{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: larger;
+    margin-top: 5%;
+    
+}
+
+.profile_description textarea{
+
+    margin-top: 1%;
+    width: 68%;
+    border-bottom: 1.5px solid #F7270B;    
+
+}
+
+.profile_submit{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: larger;
+    text-align: center;
+    cursor: pointer;
+    margin-right: 8%;
+}
+
+input[type="submit"] {
+    background-color: #FF5733; 
+    color: #FFFFFF;
+    border: none;
+}
+
+input[type="submit"]:hover {
+    background-color: #FF8C66; /* Background color on hover */
+    color: #FFFFFF;
+} 
+
+
