--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,6 +22,9 @@
         <button class="buttom" (click)="onSignin(email.value, password.value)">Login</button>
         <button class="button" routerLink="/signup">Sign Up</button>
     </div>
+    <div class=".container">
+        <img style="background-color: black;" src="assets/images/rabbit.jpg" class="img-fluid">
+    </div>
     <!-- <app-home *ngIf="isSignedIn" (isLogout)="handleLogout()"></app-home> -->
 </body>
 </html>
