--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -26,6 +26,9 @@
       
     <button type="submit">Sign Up</button>
     <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+    <div>
+    <img style="background-color: black;" src="assets/images/rabbit.jpg" class="img-fluid">
+    </div>
 </form>
 </body>
 </html>
