--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -1,6 +1,11 @@
 <p>search-list works!</p>
 
-<div *ngFor="let user of usernames$ | async">
-  {{ user.userName }}
-</div>
 
+
+
+<h2>Search Results:</h2>
+<ul>
+  <li *ngFor="let username of searchResults">
+    {{ username }}
+  </li>
+</ul>
