--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -25,8 +25,10 @@
 </head>
 <body>
   <h1>Users Matching Search Query</h1>
-  <div *ngFor="let user of usernames$ | async">
-    {{ user.userName }}
-  </div>
+<ul>
+  <li *ngFor="let username of searchResults">
+    {{ username }}
+  </li>
+</ul>
 </body>
 </html>
