--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
-  <link href="https://fonts.googleapis.com/css?family=Irish+Grover" rel="stylesheet">
-  <style>
-    /* Add any additional CSS styling here */
-    body {
-      font-family: Arial, sans-serif; /* Default font */
-      margin: 0;
-      padding: 0;
-    }
-    /* Apply Irish Grover font only to the title */
-    h1 {
-      font-family: 'Irish Grover', sans-serif;
-      font-size: 36px;
-      color: #333; /* Dark gray text */
-      text-align: center;
-      margin-top: 50px;
-    }
-    /* Add your CSS styles here */
-  </style>
-</head>
-<body>
-  <h1>Users Matching Search Query</h1>
-<ul>
-  <li *ngFor="let username of searchResults">
-    {{ username }}
-  </li>
-</ul>
-</body>
-</html>
+<html>
+    <head>
+        <link href='https://fonts.googleapis.com/css?family=Irish Grover' rel='stylesheet'>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
+    <body >
+        <div class="sidenav">
+            <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
+            <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
+            <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
+            <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
+        </div>
+        <div >
+
+         <h1>Users Matching Search Query</h1>
+  
+  <div class ="results">
+  <ul>
+    <ng-container *ngIf="searchResults.length > 0; else noResults">
+      <li *ngFor="let username of searchResults">
+        {{ username }}
+      </li>
+    </ng-container>
+    <ng-template #noResults>
+      <p>No results found.</p>
+    </ng-template>
+  </ul>
+  </div>
+ 
