--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -23,6 +23,10 @@
         <label for="userPassword">User Password:</label>
         <input type="password" id="userPassword" name="userPassword" [(ngModel)]="userPassword">
     </div>
+    <div class="form-group">
+        <label for="userPassword">Confirm Password:</label>
+        <input type="password" id="userPassword2" name="userPassword2" [(ngModel)]="userPassword2">
+    </div>
       
     <button type="submit">Sign Up</button>
     <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
