--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,10 +2,7 @@
 <html>
 <head>
     <title>My Profile</title>
-    <link 
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -16,29 +13,28 @@
                     <img src="assets/images/greyIcon.png">
                 </div>
                 <div class="user-details">
-                    <form action="profile.php" method="post">
+                    <form>
                         <div class="form-group">
                             <div class="label">Name</div>
-                            <input type="text" id="name" name="name" required>
+                            <input type="text" id="name" name="name" [(ngModel)]="userProfile.userRealName" required>
                         </div>
                         <div class="form-group">
-                            <div class="label">Age</div>
-                            <input type="number" id="age" name="age" min="18" max="100" required>
+                          <div class="label">Age</div>
+                          <input type="number" id="age" name="age" [(ngModel)]="userProfile.userAge" required>
                         </div>
                         <div class="form-group">
                             <div class="label">Gender</div>
-                            <select id="gender" name="gender" required>
-                                <option value="male">Male</option>
-                                <option value="female">Female</option>
-                                <option value="other">Other</option>
+                            <select id="gender" name="gender" [(ngModel)]="userProfile.userGender" required>
+                              <option value="male">Male</option>
+                              <option value="female">Female</option>
+                              <option value="other">Other</option>
                             </select>
                             <div class="label">Seeking</div>
-                            <select id="Seeking" name="Seeking" required>
-                                <option value="male">Male</option>
-                                <option value="female">Female</option>
-                                <option value="other">Other</option>
+                            <select id="Seeking" name="Seeking" [(ngModel)]="userProfile.userSeeking" required>
+                              <option value="male">Male</option>
+                              <option value="female">Female</option>
+                              <option value="other">Other</option>
                             </select>
-                            
                         </div>
                     </form>
                 </div>
@@ -49,41 +45,38 @@
                 <div class="Profile_button">
                     <button (click)="logout()">Sign Out</button>
                 </div>
-                <div class="Profile_title"> Dating in Disguise </div>
-                <div class="Profile_background"><img src="assets/images/pokerBackground.jpg"> </div>
+                <div class="Profile_title">Dating in Disguise</div>
+                <div class="Profile_background"><img src="assets/images/pokerBackground.jpg"></div>
             </div>
             <div class="white-section">
                 <div class="interests">
                     <label class="label" for="interests">Interests</label><br>
-            
-                <input type="checkbox" id="reading" name="interest" value="reading">
-                <label class="label2" for="reading">Reading</label><br>
-                <input type="checkbox" id="cooking" name="interest" value="cooking">
-                <label class="label2" for="cooking">Cooking</label><br>
-                <input type="checkbox" id="sports" name="interest" value="sports">
-                <label class="label2" for="sports">Sports</label><br>
-                <input type="checkbox" id="traveling" name="interest" value="traveling">
-                <label class="label2" for="traveling">Traveling</label><br>
-                <input type="checkbox" id="smoker" name="interest" value="smoker">
-                <label class="label2" for="smoker">Smoker</label><br>
+                    <input type="checkbox" id="reading" name="interest" value="reading">
+                    <label class="label2" for="reading">Reading</label><br>
+                    <input type="checkbox" id="cooking" name="interest" value="cooking">
+                    <label class="label2" for="cooking">Cooking</label><br>
+                    <input type="checkbox" id="sports" name="interest" value="sports">
+                    <label class="label2" for="sports">Sports</label><br>
+                    <input type="checkbox" id="traveling" name="interest" value="traveling">
+                    <label class="label2" for="traveling">Traveling</label><br>
+                    <input type="checkbox" id="smoker" name="interest" value="smoker">
+                    <label class="label2" for="smoker">Smoker</label><br>
                 </div>
                 <div class="profile_description">
-                <label class="label" for="description">Description:</label><br>
-                <textarea id="description" name="description" rows="4" cols="50" required></textarea>
-               </div>
-               <div class="profile_submit">
-                <input type="submit" value="Submit">
-               </div>
-                
+                    <label class="label" for="description">Description:</label><br>
+                    <textarea id="description" name="description" rows="4" cols="50" required></textarea>
+                </div>
+                <div class="profile_submit">
+                    <button type="button" (click)="updateProfile()">Submit</button>
+                </div>
             </div>
         </div>
-
     </div>
     <div class="sidenav">
-            <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
-            <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
-            <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
-            <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
-        </div>
+        <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
+        <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
+        <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
+        <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
+    </div>
 </body>
 </html>
