--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -6,6 +6,7 @@
     top: 0;
     left: 0;
     background-color: #000; 
+
 }
 
 .sidenav a {
@@ -14,6 +15,8 @@
     font-size: 18px;
     color: #fff; 
     display: block;
+    border-top: 1.5px solid #a9a5a4;    
+
 }
 
 .sidenav a:hover {
@@ -25,6 +28,7 @@
     overflow: hidden; 
     width: 100%;
     height: 100%;
+
 }
 
 
