--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -15,6 +15,8 @@
     font-size: 18px;
     color: #fff; 
     display: block;
+    border-top: 1.5px solid #a9a5a4;    
+
 }
 .sidenav a:hover {
     background-color: #333; 
