--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,7 @@
                   <button type="submit">Search</button>
                 </form>
                 <!-- Display Hello user here -->
-                <p id="userGreeting">Test {{ userEmail }}</p>
+                <p id="userGreeting">Hello {{ userEmail }}</p>
             </div>
         </div>
 
