--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href='https://fonts.googleapis.com/css?family=Irish Grover' rel='stylesheet'>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    </head>
-    <body >
-        <div class="sidenav">
-            <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
-            <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
-            <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
-            <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Irish Grover' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body>
+    <div class="sidenav">
+        <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
+        <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
+        <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
+        <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
+    </div>
+    <div>
+        <h1>Users Matching Search Query</h1>
+        <div class="results">
+            <ng-container *ngIf="searchResults.length > 0; else noResults">
+              <div *ngFor="let result of searchResults">
+                <div>
+                  <h3>User Information:</h3>
+                  <p><strong>Username:</strong> {{ result.user.userName }}</p>
+                  <p><strong>Email:</strong> {{ result.user.email }}</p>
+                  <!-- Add more user information as needed -->
+                  <h3>Profile Information:</h3>
+                  <p><strong>Profile Image URL:</strong> {{ result.profile.profileImageURL }}</p>
+                  <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'">
+                  <!-- Add more profile information as needed -->
+                </div>
+                <hr>
+              </div>
+            </ng-container>
+            <ng-template #noResults>
+                <p>No results found.</p>
+            </ng-template>
         </div>
-        <div >
-
-         <h1>Users Matching Search Query</h1>
-  
-  <div class ="results">
-  <ul>
-    <ng-container *ngIf="searchResults.length > 0; else noResults">
-      <li *ngFor="let username of searchResults">
-        {{ username }}
-      </li>
-    </ng-container>
-    <ng-template #noResults>
-      <p>No results found.</p>
-    </ng-template>
-  </ul>
-  </div>
- 
+    </div>
+</body>
+</html>
