--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -300,6 +300,7 @@ input[type="file"] {
 
 .profile-image img {
   padding-bottom: 10px; /* Adjust the value as needed */
+  border-radius: 50%;
 }
 
 
