--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="form-group">
                           <div class="label">Age</div>
-                          <input type="number" id="age" name="age" [(ngModel)]="userProfile.userAge" required>
+                          <input type="number" id="age" name="age" min="18" max="99" [(ngModel)]="userProfile.userAge" required>
                         </div>
                         <div class="form-group">
                             <div class="label">Gender</div>
