--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -23,7 +23,7 @@
                   <!-- Add more user information as needed -->
                   <h3>Profile Information:</h3>
                   <p><strong>Profile Image URL:</strong> {{ result.profile.profileImageURL }}</p>
-                  <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'">
+                  <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'" class="circular-image">
                   <!-- Add more profile information as needed -->
                 </div>
                 <hr>
