--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet'>
 </head>
 <body>
-<h2 class = "h2">Sign Up</h2>
+<h2 class="h2">Sign Up</h2>
 <form (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="userName">User Name:</label>
@@ -18,7 +18,8 @@
     <div class="form-group">
         <label for="userEmail">User Email:</label>
         <br>
-        <input type="email" id="userEmail" name="userEmail" [(ngModel)]="userEmail">
+        <!-- Add autocomplete attribute -->
+        <input type="email" id="userEmail" name="userEmail" [(ngModel)]="userEmail" autocomplete="username">
     </div>
 
     <div class="form-group">
