--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -3,6 +3,14 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Irish Grover' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        /* Additional styles */
+        .user-info {
+            padding: 10px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <div class="sidenav">
@@ -15,23 +23,23 @@
         <h1>Users Matching Search Query</h1>
         <div class="results">
             <ng-container *ngIf="searchResults.length > 0; else noResults">
-              <div *ngFor="let result of searchResults">
-                <div>
-                  <h3>User Information:</h3>
-                  <p><strong>Username:</strong> {{ result.user.userName }}</p>
-                  <p><strong>Email:</strong> {{ result.user.email }}</p>
-                  <!-- Add more user information as needed -->
-                
-                  <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'" class="circular-image">
-                  <!-- Add more profile information as needed -->
+                <div class="row">
+                    <div class="col-md-4" *ngFor="let result of searchResults">
+    <div class="user-info">
+        <h3>User Information:</h3>
+        <p><strong>Username:</strong> {{ result.user.userName }}</p>
+        <p><strong>Email:</strong> {{ result.user.userEmail }}</p>
+        <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'" class="circular-image">
+    </div>
+</div>
                 </div>
-                <hr>
-              </div>
             </ng-container>
             <ng-template #noResults>
                 <p>No results found.</p>
             </ng-template>
         </div>
+    </div>
+    <div>
     </div>
 </body>
 </html>
