Search page css

--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -27,9 +27,11 @@
                     <div class="col-md-4" *ngFor="let result of searchResults">
                         <div class="user-info">
                             <h3>User Information:</h3>
+                            <div class="profile-info">
                             <p><strong>Username:</strong> {{ result.user.userName }}</p>
                             <p><strong>Email:</strong> {{ result.user.userEmail }}</p>
                             <p><strong>Name:</strong> {{ result.profile.userRealName }}</p>
+                            </div>
                             <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'" class="circular-image">
                         </div>
                     </div>
