--- a/src/app/search-list/search-list.component.css
+++ b/src/app/search-list/search-list.component.css
@@ -1,72 +1,84 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: white;
-}
+ html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background-color: white;
+            font-size: 1em;
+        }
 
-.sidenav {
-    height: 100%;
-    width: 12%;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #000; 
-    /* padding-top: 20px; */
-}
+        .sidenav {
+            height: 100%;
+            width: 12%;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: #000; 
+        }
 
-.sidenav a {
-    padding: 10px 15px;
-    text-decoration: none;
-    font-size: 18px;
-    color: #fff; 
-    display: block;
-    border-top: 1.5px solid #a9a5a4;   
-}
-.sidenav a:hover {
-    background-color: #333; 
-}
-.rounded_img {
-    border-radius: 50%;
-    overflow: hidden; 
-    width: 100%;
-    height: 100%;
-}
+        .sidenav a {
+            padding: 10px 15px;
+            text-decoration: none;
+            font-size: 18px;
+            color: #fff; 
+            display: block;
+            border-top: 1.5px solid #a9a5a4;   
+        }
 
- h1 {
-      font-family: 'Irish Grover', sans-serif;
-      font-size: 36px;
-      color: #333; /* Dark gray text */
-      text-align: center;
-    }
+        .sidenav a:hover {
+            background-color: #333; 
+        }
 
-  body{
-    background-color: white;
-    font-family: Arial, sans-serif; /* Default font */
-    margin: 0;
-    padding: 0;
-  }
+        .rounded_img {
+            border-radius: 50%;
+            overflow: hidden; 
+            width: 100%;
+            height: 100%;
+        }
 
-  .results {
-    margin-left: 12.5%;
-  }
+        h1 {
+            font-family: 'Irish Grover', sans-serif;
+            font-size: 36px;
+            color: #333; /* Dark gray text */
+            text-align: center;
+        }
 
-  .circular-image {
-    width: 20%; /* Adjust the width percentage to your desired size */
-  height: auto; /* Let the height adjust automatically based on the width */
-  max-width: 150px; /* Limit the maximum width to ensure the image doesn't become too large */
-  border-radius: 50%; /* Make the image circular */
-  object-fit: cover; 
-  }
+        .results {
+            margin-left: 12.5%;
+        }
+
+        .user-info {
+          width: 95%;
+            padding: 3px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+            overflow: hidden; /* Clear the floats */
+        }
+
+        .profile-info {
+            float: left;
+        }
+
+        .row>* {
+          padding-right: 0;
+          padding-left: 1;
+        }
 
 
-@media (max-width:60em) {
-    .sidenav {
-      display: none;
-    }
-  
-    .results {
-      margin-left: 0.5%;
-    }
-}
+        .circular-image {
+            float: right;
+            width: 50%;
+            height: auto;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        @media (max-width:60em) {
+            .sidenav {
+                display: none;
+            }
+
+            .results {
+                margin-left: 0.5%;
+            }
+        }
