--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -30,7 +30,7 @@
             </div>
             <div class="body">
               <div *ngIf="selectedChatId">
-                <div *ngFor="let message of chatMessages">
+                <div *ngFor="let message of chatMessages" [ngClass]="{'sent-message': message.data.senderID === uid, 'received-message': message.data.senderID !== uid}">
                   <p class="message1">Message ID: {{ message.messageId }}</p>
                   <p class="message1">Text: {{ message.data.content }}</p>
                   <p class="message1">SenderID: {{ message.data.senderID }}</p>
@@ -41,6 +41,7 @@
                 <p class="placeholder-message">Select a chat to view messages</p>
               </div>
             </div>
+            
             <div class="footer">
               <form>
                 <input type="text" name="lol">
